Made changes to allow for Metadata to supply field values to be used for Matching Rules without being included on the Contact.

--- a/force-app/main/default/layouts/Summit_Events_Contact_Matching_Mapping__mdt-Summit Events Contact Matching Mapping Layout.layout-meta.xml
+++ b/force-app/main/default/layouts/Summit_Events_Contact_Matching_Mapping__mdt-Summit Events Contact Matching Mapping Layout.layout-meta.xml
@@ -44,6 +44,10 @@
                 <behavior>Required</behavior>
                 <field>Contact_Matching_Method__c</field>
             </layoutItems>
+            <layoutItems>
+                <behavior>Edit</behavior>
+                <field>Matching_Only__c</field>
+            </layoutItems>
         </layoutColumns>
         <style>TwoColumnsTopToBottom</style>
     </layoutSections>
@@ -82,7 +86,7 @@
     <showRunAssignmentRulesCheckbox>false</showRunAssignmentRulesCheckbox>
     <showSubmitAndAttachButton>false</showSubmitAndAttachButton>
     <summaryLayout>
-        <masterLabel>00hP0000001d3eU</masterLabel>
+        <masterLabel>00h5B000001aSGN</masterLabel>
         <sizeX>4</sizeX>
         <sizeY>0</sizeY>
         <summaryLayoutStyle>Default</summaryLayoutStyle>
