--- a/force-app/main/default/layouts/Summit_Events_Registration__c-Summit Events Registration Default Layout.layout-meta.xml
+++ b/force-app/main/default/layouts/Summit_Events_Registration__c-Summit Events Registration Default Layout.layout-meta.xml
@@ -92,7 +92,7 @@
             </layoutItems>
             <layoutItems>
                 <behavior>Readonly</behavior>
-                <field>Virtual_Appointment_URL__c</field>
+                <field>Virtual_Meeting_URL__c</field>
             </layoutItems>
         </layoutColumns>
         <layoutColumns>
