--- a/force-app/main/default/layouts/Summit_Events_Instance__c-Summit Events Instance Default Layout.layout-meta.xml
+++ b/force-app/main/default/layouts/Summit_Events_Instance__c-Summit Events Instance Default Layout.layout-meta.xml
@@ -83,7 +83,7 @@
             </layoutItems>
             <layoutItems>
                 <behavior>Edit</behavior>
-                <field>Virtual_Appointment_Link__c</field>
+                <field>Virtual_Meeting_Link__c</field>
             </layoutItems>
             <layoutItems>
                 <emptySpace>true</emptySpace>
