--- a/force-app/main/default/pages/SummitEventsAddToCalendar.page
+++ b/force-app/main/default/pages/SummitEventsAddToCalendar.page
@@ -13,7 +13,7 @@ BEGIN:VEVENT
 SUMMARY:{!SUMMARY}
 DTSTART;TZID={!TIMEZONE}:{!DTSTART}
 DTEND;TZID={!TIMEZONE}:{!DTEND}
-LOCATION: Summit Events
+LOCATION: {!LOCATION}
 DESCRIPTION:{!DESCRIPTION}
 STATUS:CONFIRMED
 METHOD:PUBLISH
