--- a/force-app/main/default/pages/SummitEventsRegister.page
+++ b/force-app/main/default/pages/SummitEventsRegister.page
@@ -28,7 +28,7 @@ Created by Thaddaeus Dahlberg on 5/1/2018.
         <apex:define name="body">
             <div class="slds-grid slds-wrap" xmlns="http://www.w3.org/2000/svg" version="1.1">
                 <div class="slds-col slds-p-around_x-small slds-size_1-of-1">
-                    <apex:messages />
+                    <apex:messages/>
                 </div>
 
                 <apex:form id="SummitEventRegisterForm" styleClass="slds-grid slds-wrap" style="width:100%">
@@ -59,7 +59,6 @@ Created by Thaddaeus Dahlberg on 5/1/2018.
                             <apex:outputText escape="false" value="{!eventPage.Event_Full_Text__c}"></apex:outputText>
                         </p>
                     </apex:outputPanel>
-
 
                     <!-- REGISTRATION QUESTIONS BEGIN  -->
                     <apex:outputPanel rendered="{!!eventIsClosed}" layout="none">
@@ -292,7 +291,7 @@ Created by Thaddaeus Dahlberg on 5/1/2018.
                         <div class="slds-col slds-p-around_x-small slds-size_1-of-1 slds-large-size_3-of-6">
                             <div class="slds-form-element slds-is-required">
                                 <apex:outputLabel for="lastName" styleClass="required slds-form-element__label">
-                                    Last name <abbr class="slds-required" title="required">*</abbr>
+                                    Last Name <abbr class="slds-required" title="required">*</abbr>
                                 </apex:outputLabel>
                                 <div class="slds-form-element__control">
                                     <apex:inputText value="{!newEvtReg.Registrant_Last_Name__c}" id="lastName" html-aria-describedby="lastName-required" required="true" styleClass="slds-input" disabled="{!contactSet}" maxLength="80"/>
@@ -331,11 +330,11 @@ Created by Thaddaeus Dahlberg on 5/1/2018.
                                 </div>
                             </div>
                         </apex:outputPanel>
-                    <!-- REGISTRANT PREVIOUS LAST NAME -->
+                        <!-- REGISTRANT PREVIOUS LAST NAME -->
                         <apex:outputPanel layout="block" styleClass="slds-col slds-p-around_x-small slds-size_1-of-1 slds-large-size_3-of-6" rendered="{!IF(eventPage.Ask_Last_Name_As_Student__c != 'Do not ask' && eventPage.Ask_Last_Name_As_Student__c != null, true, false)}">
                             <div class="slds-form-element {!IF(eventPage.Ask_Last_Name_As_Student__c == 'Ask and require', 'slds-is-required', '')}">
                                 <apex:outputLabel for="lastNameAsStudent" styleClass="slds-form-element__label">
-                                    Last name as student
+                                    Last Name As Student
                                     <apex:outputText escape="false" rendered="{!IF(eventPage.Ask_Last_Name_As_Student__c == 'Ask and require', true, false)}">
                                         <abbr class="slds-required" title="required">*</abbr>
                                     </apex:outputText>
@@ -349,14 +348,14 @@ Created by Thaddaeus Dahlberg on 5/1/2018.
                             </div>
                         </apex:outputPanel>
 
-                    <!-- REGISTRANT PHONE NUMBER -->
+                        <!-- REGISTRANT PHONE NUMBER -->
                         <apex:outputPanel layout="block" id="phoneBlock" styleClass="slds-grid slds-wrap slds-size_1-of-1 {!IF(CONTAINS(eventPage.Ask_Phone__c, 'require one'), ' phone-require-one ','')}" rendered="{!IF(BEGINS(eventPage.Ask_Phone__c, 'Do not ') || eventPage.Ask_Phone__c == null, false, true) }" style="width:100%">
 
                             <apex:outputPanel layout="block" styleClass="slds-col slds-p-around_x-small slds-size_1-of-1" rendered="{!IF(CONTAINS(eventPage.Ask_Phone__c, 'require one'),true,false)}">
                                 <p class="slds-is-required"><strong>Please provide either a home or mobile number</strong></p>
                             </apex:outputPanel>
 
-                        <!-- HOME PHONE NUMBER -->
+                            <!-- HOME PHONE NUMBER -->
                             <apex:outputPanel layout="block" styleClass="slds-col slds-p-around_x-small slds-size_1-of-1 slds-large-size_3-of-6" rendered="{!IF(CONTAINS(eventPage.Ask_Phone__c, 'home and mobile') || phoneType == 'home', true, false)}">
                                 <div class="slds-form-element {!If(eventPage.Ask_Phone__c = 'Ask with type require'|| eventPage.Ask_Phone__c = 'Ask home and mobile require both', 'slds-is-required', '')}">
                                     <apex:outputLabel for="phone" styleClass="slds-form-element__label">
@@ -428,7 +427,7 @@ Created by Thaddaeus Dahlberg on 5/1/2018.
                                 </div>
                             </apex:outputPanel>
 
-                    </apex:outputPanel>  
+                        </apex:outputPanel>
                         <!-- Gender Question -->
                         <apex:outputPanel styleClass="slds-col slds-p-around_x-small slds-size_1-of-1 slds-medium-size_3-of-6 slds-large-size_3-of-6" layout="block" rendered="{!IF(eventPage.Ask_Gender__c != 'Do not ask' && !isBlank(eventPage.Ask_Gender__c), true, false)}">
                             <div class="slds-form-element {!IF(CONTAINS(eventPage.Ask_Gender__c, 'require'), 'slds-is-required', '')}">
@@ -466,7 +465,7 @@ Created by Thaddaeus Dahlberg on 5/1/2018.
                                 </div>
                             </div>
                         </apex:outputPanel>
-                                                
+
                         <!-- Title Question -->
                         <apex:outputPanel styleClass="slds-col slds-p-around_x-small slds-size_1-of-1 slds-medium-size_3-of-6 slds-large-size_3-of-6" layout="block" rendered="{!IF(eventPage.Ask_Title__c != 'Do not ask' && !isBlank(eventPage.Ask_Title__c), true, false)}">
                             <div class="slds-form-element {!IF(CONTAINS(eventPage.Ask_Title__c, 'require'), 'slds-is-required', '')}">
@@ -482,7 +481,7 @@ Created by Thaddaeus Dahlberg on 5/1/2018.
                                 </div>
                             </div>
                         </apex:outputPanel>
-                                                
+
                         <!-- Registrant Company or Organization Question -->
                         <apex:outputPanel styleClass="slds-col slds-p-around_x-small slds-size_1-of-1 slds-medium-size_3-of-6 slds-large-size_3-of-6" layout="block" rendered="{!IF(eventPage.Ask_Company_Organization__c != 'Do not ask' && !isBlank(eventPage.Ask_Company_Organization__c), true, false)}">
                             <div class="slds-form-element {!IF(CONTAINS(eventPage.Ask_Company_Organization__c, 'require'), 'slds-is-required', '')}">
@@ -493,8 +492,8 @@ Created by Thaddaeus Dahlberg on 5/1/2018.
                                     </apex:outputText>
                                 </apex:outputLabel>
                                 <div class="slds-form-element__control">
-                                     <apex:inputText value="{!newEvtReg.Registrant_Company_Organization__c}" id="companyorganization" html-aria-describedby="companyorganization" required="{!IF(eventPage.Ask_Company_Organization__c == 'Ask and require', true, false)}" styleClass="slds-select {!IF(eventPage.Ask_Company_Organization__c == 'Ask and require', 'required', '')}" disabled="{!contactSet}">                                  
-                                     </apex:InputText>
+                                    <apex:inputText value="{!newEvtReg.Registrant_Company_Organization__c}" id="companyorganization" html-aria-describedby="companyorganization" required="{!IF(eventPage.Ask_Company_Organization__c == 'Ask and require', true, false)}" styleClass="slds-select {!IF(eventPage.Ask_Company_Organization__c == 'Ask and require', 'required', '')}" disabled="{!contactSet}">
+                                    </apex:InputText>
                                 </div>
                             </div>
                         </apex:outputPanel>
@@ -577,7 +576,7 @@ Created by Thaddaeus Dahlberg on 5/1/2018.
                                     {!IF(eventPage.Ask_Relationship_To_Institution__c == 'Ask and require', 'Please select a relationship you have to the institution.', '')}
                                 </div>
                             </div>
-                        </apex:outputPanel>                        
+                        </apex:outputPanel>
 
                         <!-- Mailing Address registration (optional)-->
                         <apex:outputPanel layout="none" rendered="{!eventPage.Ask_Mailing_Address__c != 'Do not ask' && eventPage.Ask_Mailing_Address__c != null}">
