Add some layout and vf fee lists

--- a/force-app/main/default/layouts/Summit_Events_Instance__c-Summit Events Instance Default Layout.layout-meta.xml
+++ b/force-app/main/default/layouts/Summit_Events_Instance__c-Summit Events Instance Default Layout.layout-meta.xml
@@ -163,6 +163,14 @@
                 <behavior>Edit</behavior>
                 <field>Location_Map_Link_Override__c</field>
             </layoutItems>
+            <layoutItems>
+                <behavior>Edit</behavior>
+                <field>Event_Fee_Override__c</field>
+            </layoutItems>
+            <layoutItems>
+                <behavior>Edit</behavior>
+                <field>Event_Fee_Attribute_Override__c</field>
+            </layoutItems>
         </layoutColumns>
         <layoutColumns>
             <layoutItems>
@@ -176,6 +184,17 @@
             <layoutItems>
                 <behavior>Edit</behavior>
                 <field>Feed_Registration_Button_Text_Override__c</field>
+            </layoutItems>
+            <layoutItems>
+                <emptySpace>true</emptySpace>
+            </layoutItems>
+            <layoutItems>
+                <behavior>Edit</behavior>
+                <field>Event_Fee_Additional_Override__c</field>
+            </layoutItems>
+            <layoutItems>
+                <behavior>Edit</behavior>
+                <field>Event_Fee_Additional_Attribute_Override__c</field>
             </layoutItems>
         </layoutColumns>
         <style>TwoColumnsLeftToRight</style>
@@ -290,7 +309,7 @@
     <showRunAssignmentRulesCheckbox>false</showRunAssignmentRulesCheckbox>
     <showSubmitAndAttachButton>false</showSubmitAndAttachButton>
     <summaryLayout>
-        <masterLabel>00h8A000001Mjok</masterLabel>
+        <masterLabel>00h11000002pkwW</masterLabel>
         <sizeX>4</sizeX>
         <sizeY>0</sizeY>
         <summaryLayoutStyle>Default</summaryLayoutStyle>
