--- a/force-app/main/default/pages/SummitEventsSubmit.page
+++ b/force-app/main/default/pages/SummitEventsSubmit.page
@@ -47,6 +47,12 @@ Created by Thaddaeus Dahlberg on 5/1/2018.
                             </p>
                             <apex:outputText escape="false" value="{!chosenFormatted}"/>
                         </div>
+
+                        <apex:outputPanel layout="block" rendered="{!showPaymentButton}" styleClass="slds-col slds-p-around_x-small slds-size_1-of-1">
+                            <h3 class="slds-text-heading_medium slds-p-vertical_xx-small">Event Cost</h3>
+                            <apex:outputText escape="false" value="{!paymentItemized}"/>
+                        </apex:outputPanel>
+
                         <div class="slds-col slds-size_1-of-1 slds-clearfix slds-p-vertical_x-small slds-p-vertical_xx-small">
                             <p class="slds-text-body slds-p-vertical_xx-small">
                                 <apex:commandLink action="{!submitRegistration}" onClick="fadeout();" Value="Submit Registration" id="submitOptions" styleClass="slds-button slds-button_brand slds-p-horizontal_xx-large slds-p-vertical_xx-small"/>
