--- a/force-app/main/default/pages/SummitEventsDonation.page
+++ b/force-app/main/default/pages/SummitEventsDonation.page
@@ -8,45 +8,66 @@ Created by Thaddaeus Dahlberg on 2/10/2020.
 <apex:page id="SummitEventsDonation" showHeader="false" sidebar="false" applyHtmlTag="false" applyBodyTag="false" standardStylesheets="false" docType="html-5.0" cache="false" controller="SummitEventsDonationController" action="{!checkEventDetails}">
     <apex:composition template="{!templateSelected}">
         <apex:define name="metaPageTitle">
-            {!eventInstance.Event__r.Event_Name__c}
+            {!eventPage.Event_Name__c}
             <apex:outputText rendered="{!!ISBLANK(eventInstance.Instance_Title__c)}" value="{! ' - ' + eventInstance.Instance_Title__c}"/>
             - Donation
         </apex:define>
-        <apex:define name="pageTitle"><a href="{!eventInstance.Event__r.Event_Home_Link_URL__c}">{!eventInstance.Event__r.Event_Home_Link_Title__c}</a></apex:define>
-        <apex:define name="afterJquery">
+        <apex:define name="pageTitle"><a href="{!eventPage.Event_Home_Link_URL__c}">{!eventPage.Event_Home_Link_Title__c}</a></apex:define>
+        <apex:define name="scriptsHead">
             <link href="{!URLFOR($Resource.SummitEventsAssets, '/css/main.css')}" rel="stylesheet" type="text/css"/>
-            <script src="{!URLFOR($Resource.SummitEventsAssets, '/js/donation.js')}" type="text/javascript"/>
+            <script src="{!URLFOR($Resource.SummitEventsAssets, '/js/donation.js')}" type="text/javascript"></script>
         </apex:define>
         <apex:define name="sectionNav"/>
         <apex:define name="body">
-            <apex:form id="OptionalDonation">
-                <apex:outputPanel layout="block" rendered="{!eventInstance.Event__r.Display_Optional_Donation__c}" styleClass="row">
-                    <div class="column">
-                        <apex:outputText escape="false" value="{!eventInstance.Event__r.Donation_Description__c}"></apex:outputText>
+
+            <div class="slds-grid slds-wrap" xmlns="http://www.w3.org/2000/svg" version="1.1">
+                <div class="slds-col slds-p-around_x-small slds-size_1-of-1">
+                    <apex:messages/>
+                </div>
+                <apex:form id="OptionalDonation" styleClass="slds-grid slds-wrap">
+
+                    <!-- EVENT BREADCRUMB -->
+                    <div class="slds-col slds-p-around_x-small slds-size_1-of-1">
+                        <apex:outputText escape="false" value="{!navBreadCrumb}"/>
                     </div>
-                    <div class="column small-12 medium-6 large-6">
-                        <apex:outputLabel for="donationAmountSel" value="Amount"></apex:outputLabel>
+
+                    <!-- EVENT CLOSED MESSAGE -->
+                    <apex:outputPanel styleClass="slds-col slds-p-around_x-small slds-size_1-of-1" rendered="{!eventIsClosed}">
+                        <p class="slds-text-body">
+                            <apex:outputText escape="false" value="{!eventPage.Event_Full_Text__c}"/>
+                        </p>
+                    </apex:outputPanel>
+
+
+                    <div class="slds-col slds-size_1-of-1 slds-clearfix slds-p-vertical_x-small slds-p-vertical_xx-small">
+                        <apex:outputText escape="false" value="{!eventPage.Donation_Description__c}"/>
+                    </div>
+
+                    <div class="slds-col slds-p-around_x-small slds-size_1-of-1 slds-large-size_3-of-6">
+                        <apex:outputLabel for="donationAmountSel" value="Amount"/>
                         <apex:selectList multiSelect="false" value="{!donationAmountSelect}" id="donationAmountSel" size="1" required="false">
                             <apex:selectOptions value="{!suggestedDonation}"/>
                         </apex:selectList>
-                        <apex:inputText value="{!donationAmount}" style="display:none;" id="donationAmount"></apex:inputText>
+                        <apex:inputText value="{!donationAmount}" style="display:none;" id="donationAmount"/>
                     </div>
-                    <div class="column small-12 medium-6 large-6">
-                        <apex:outputLabel for="donationFund" value="Designation"></apex:outputLabel>
+
+                    <div class="slds-col slds-p-around_x-small slds-size_1-of-1 slds-large-size_3-of-6">
+                        <apex:outputLabel for="donationFund" value="Designation"/>
                         <apex:selectList multiSelect="false" value="{!donationRecipient}" id="donationFund" size="1" required="false">
                             <apex:selectOptions value="{!donationRecipientList}"/>
                         </apex:selectList>
                     </div>
-                </apex:outputPanel>
-                <div class="row">
-                    <div class="column">
-                        <p>
-                            <apex:commandLink action="{!submitDonation}" onClick="fadeout();" Value="Next" id="submitOptions" styleClass="button confirmContinue"/>
-                            <apex:commandLink action="{!previousPage}" onClick="fadeout();" Value="Previous" id="previousPage" styleClass="button previous"/>
+
+                    <div class="slds-col slds-size_1-of-1 slds-clearfix slds-p-vertical_x-small slds-p-vertical_xx-small">
+                        <p class="slds-text-body slds-p-vertical_xx-small">
+                            <apex:commandLink action="{!submitDonation}" onClick="fadeout();" Value="Submit Donation" id="submitOptions" styleClass="slds-button slds-button_brand slds-p-horizontal_xx-large slds-p-vertical_xx-small"/>
+                            <apex:commandLink action="{!previousPage}" onClick="fadeout();" Value="Previous" id="previousPage" styleClass="slds-button slds-button_neutral slds-p-horizontal_xx-large slds-p-vertical_xx-small"/>
                         </p>
                     </div>
-                </div>
-            </apex:form>
+
+
+                </apex:form>
+            </div>
         </apex:define>
     </apex:composition>
 </apex:page>
