--- a/force-app/main/default/pages/SummitEventsDonation.page
+++ b/force-app/main/default/pages/SummitEventsDonation.page
@@ -22,13 +22,19 @@ Created by Thaddaeus Dahlberg on 2/10/2020.
 
             <div class="slds-grid slds-wrap" xmlns="http://www.w3.org/2000/svg" version="1.1">
                 <div class="slds-col slds-p-around_x-small slds-size_1-of-1">
-                    <apex:messages/>
+                    <apex:messages />
                 </div>
                 <apex:form id="OptionalDonation" styleClass="slds-grid slds-wrap">
 
                     <!-- EVENT BREADCRUMB -->
                     <div class="slds-col slds-p-around_x-small slds-size_1-of-1">
                         <apex:outputText escape="false" value="{!navBreadCrumb}"/>
+                    </div>
+
+                    <div class="slds-col slds-size_1-of-1 slds-p-vertical_x-small slds-p-vertical_xx-small">
+                        <h2 class="slds-text-heading_large slds-p-vertical_xx-small">
+                            <apex:outputText escape="false" value="{!eventPage.Donation_Title__c}"/>
+                        </h2>
                     </div>
 
                     <!-- EVENT CLOSED MESSAGE -->
@@ -38,33 +44,60 @@ Created by Thaddaeus Dahlberg on 2/10/2020.
                         </p>
                     </apex:outputPanel>
 
+                    <apex:outputPanel rendered="{!!eventIsClosed}" layout="none">
+                        <div class="slds-col slds-p-around_x-small slds-size_1-of-1">
+                            <apex:outputText escape="false" value="{!eventPage.Donation_Description__c}"/>
+                        </div>
 
-                    <div class="slds-col slds-size_1-of-1 slds-clearfix slds-p-vertical_x-small slds-p-vertical_xx-small">
-                        <apex:outputText escape="false" value="{!eventPage.Donation_Description__c}"/>
-                    </div>
+                        <div class="slds-col slds-p-around_x-small slds-size_1-of-1 slds-large-size_3-of-6">
+                            <div class="slds-form-element">
+                                <apex:outputLabel for="donationAmountSel" styleClass="slds-form-element__label">
+                                    Amount
+                                </apex:outputLabel>
+                                <div class="slds-form-element__control">
+                                    <div class="slds-select_container">
+                                        <apex:selectList multiSelect="false" value="{!donationAmountSelect}" id="donationAmountSel" size="1" required="false" styleClass="slds-select">
+                                            <apex:selectOptions value="{!suggestedDonation}"/>
+                                        </apex:selectList>
+                                    </div>
+                                </div>
 
-                    <div class="slds-col slds-p-around_x-small slds-size_1-of-1 slds-large-size_3-of-6">
-                        <apex:outputLabel for="donationAmountSel" value="Amount"/>
-                        <apex:selectList multiSelect="false" value="{!donationAmountSelect}" id="donationAmountSel" size="1" required="false">
-                            <apex:selectOptions value="{!suggestedDonation}"/>
-                        </apex:selectList>
-                        <apex:inputText value="{!donationAmount}" style="display:none;" id="donationAmount"/>
-                    </div>
+                            </div>
+                        </div>
 
-                    <div class="slds-col slds-p-around_x-small slds-size_1-of-1 slds-large-size_3-of-6">
-                        <apex:outputLabel for="donationFund" value="Designation"/>
-                        <apex:selectList multiSelect="false" value="{!donationRecipient}" id="donationFund" size="1" required="false">
-                            <apex:selectOptions value="{!donationRecipientList}"/>
-                        </apex:selectList>
-                    </div>
+                        <div class="slds-col slds-p-around_x-small slds-size_1-of-1 slds-large-size_3-of-6">
+                            <div class="slds-form-element">
+                                <apex:outputLabel for="donationFund" styleClass="slds-form-element__label">
+                                    Designation
+                                </apex:outputLabel>
+                                <div class="slds-form-element__control">
+                                    <div class="slds-select_container">
+                                        <apex:selectList multiSelect="false" value="{!donationRecipient}" id="donationFund" size="1" required="false" styleClass="slds-select">
+                                            <apex:selectOptions value="{!donationRecipientList}"/>
+                                        </apex:selectList>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
 
-                    <div class="slds-col slds-size_1-of-1 slds-clearfix slds-p-vertical_x-small slds-p-vertical_xx-small">
-                        <p class="slds-text-body slds-p-vertical_xx-small">
-                            <apex:commandLink action="{!submitDonation}" onClick="fadeout();" Value="Submit Donation" id="submitOptions" styleClass="slds-button slds-button_brand slds-p-horizontal_xx-large slds-p-vertical_xx-small"/>
-                            <apex:commandLink action="{!previousPage}" onClick="fadeout();" Value="Previous" id="previousPage" styleClass="slds-button slds-button_neutral slds-p-horizontal_xx-large slds-p-vertical_xx-small"/>
-                        </p>
-                    </div>
+                        <div class="slds-col slds-p-around_x-small slds-size_1-of-1 slds-large-size_3-of-6" id="donationAmount" style="display:none;">
+                            <div class="slds-form-element">
+                                <apex:outputLabel for="lastName" styleClass="slds-form-element__label">
+                                    Enter Amount
+                                </apex:outputLabel>
+                                <div class="slds-form-element__control">
+                                    <apex:inputText value="{!donationAmount}" id="donationAmountEnter" styleClass="slds-input"/>
+                                </div>
+                            </div>
+                        </div>
 
+                        <div class="slds-col slds-size_1-of-1 slds-clearfix slds-p-vertical_x-small slds-p-vertical_xx-small">
+                            <p class="slds-text-body slds-p-vertical_xx-small">
+                                <apex:commandLink action="{!submitDonation}" onClick="fadeout();" Value="Next" id="submitOptions" styleClass="slds-button slds-button_brand slds-p-horizontal_xx-large slds-p-vertical_xx-small"/>
+                                <apex:commandLink action="{!previousPage}" onClick="fadeout();" Value="Previous" id="previousPage" styleClass="slds-button slds-button_neutral slds-p-horizontal_xx-large slds-p-vertical_xx-small"/>
+                            </p>
+                        </div>
+                    </apex:outputPanel>
 
                 </apex:form>
             </div>
