--- a/force-app/main/default/pages/SummitEventsAddToCalendar.page
+++ b/force-app/main/default/pages/SummitEventsAddToCalendar.page
@@ -6,24 +6,33 @@ Created by Thaddaeus Dahlberg on 11/12/2018.
 -->
 
 <apex:page id="SummitEventsAddToCalendar" title="event.ics" contentType="text/calendar" cache="false" controller="SummitEventsAddToCalendarController">
-BEGIN:VCALENDAR
-VERSION:2.0
-CALSCALE:GREGORIAN
-BEGIN:VEVENT
-SUMMARY:{!SUMMARY}
-DTSTART;TZID={!TIMEZONE}:{!DTSTART}
-DTEND;TZID={!TIMEZONE}:{!DTEND}
-LOCATION: {!LOCATION}
-DESCRIPTION:{!DESCRIPTION}
-STATUS:CONFIRMED
-METHOD:PUBLISH
-DTSTAMP:{!DTSTAMP}
-BEGIN:VALARM
-TRIGGER:-PT10M
-DESCRIPTION:{!SUMMARY}
-ACTION:DISPLAY
-END:VALARM
-UID:{!UUID}
-END:VEVENT
-END:VCALENDAR
+    BEGIN:VCALENDAR
+    PRODID:-//AddEvent Inc//AddEvent.com v1.7//EN
+    VERSION:2.0
+    BEGIN:VTIMEZONE
+    TZID:America/Los_Angeles
+    BEGIN:STANDARD
+    DTSTART:{!DTStartStandard}
+    TZOFFSETFROM:-0700
+    TZOFFSETTO:-0800
+    TZNAME:PST
+    END:STANDARD
+    BEGIN:DAYLIGHT
+    DTSTART:20200308T100000
+    TZOFFSETFROM:-0800
+    TZOFFSETTO:-0700
+    TZNAME:PDT
+    END:DAYLIGHT
+    END:VTIMEZONE
+    BEGIN:VEVENT
+    DTSTAMP:20201201T140630Z
+    STATUS:CONFIRMED
+    UID:1606831590addeventcom
+    SEQUENCE:0
+    DTSTART;TZID=America/Los_Angeles:20201202T100000
+    DTEND;TZID=America/Los_Angeles:20201202T110000
+    SUMMARY:
+    TRANSP:OPAQUE
+    END:VEVENT
+    END:VCALENDAR
 </apex:page>
