Renamed recipient and attributes to allocation for fees

--- a/force-app/main/default/layouts/Summit_Events_Fee__c-Summit Events Fee Layout.layout-meta.xml
+++ b/force-app/main/default/layouts/Summit_Events_Fee__c-Summit Events Fee Layout.layout-meta.xml
@@ -29,7 +29,7 @@
             </layoutItems>
             <layoutItems>
                 <behavior>Edit</behavior>
-                <field>Event_Fee_Attribute__c</field>
+                <field>Event_Fee_Allocation__c</field>
             </layoutItems>
         </layoutColumns>
         <layoutColumns>
