--- a/force-app/main/default/layouts/Summit_Events_Registration__c-Summit Events Registration Default Layout.layout-meta.xml
+++ b/force-app/main/default/layouts/Summit_Events_Registration__c-Summit Events Registration Default Layout.layout-meta.xml
@@ -653,7 +653,7 @@
     <relatedLists>
         <fields>NAME</fields>
         <fields>Event_Fee__c</fields>
-        <fields>Event_Fee_Attribute__c</fields>
+        <fields>Event_Fee_Allocation__c</fields>
         <fields>Event_Fee_Type__c</fields>
         <fields>Description__c</fields>
         <relatedList>Summit_Events_Fee__c.Event_Registration__c</relatedList>
