--- a/force-app/main/default/pages/SummitEventsDonation.page
+++ b/force-app/main/default/pages/SummitEventsDonation.page
@@ -72,8 +72,8 @@ Created by Thaddaeus Dahlberg on 2/10/2020.
                                 </apex:outputLabel>
                                 <div class="slds-form-element__control">
                                     <div class="slds-select_container">
-                                        <apex:selectList multiSelect="false" value="{!donationRecipient}" id="donationFund" size="1" required="false" styleClass="slds-select">
-                                            <apex:selectOptions value="{!donationRecipientList}"/>
+                                        <apex:selectList multiSelect="false" value="{!donationAllocation}" id="donationFund" size="1" required="false" styleClass="slds-select">
+                                            <apex:selectOptions value="{!donationAllocationList}"/>
                                         </apex:selectList>
                                     </div>
                                 </div>
